--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-rename": "^1.2.0",
     "gulp-stylus": "^1.3.0",
     "gulp-util": "^2.2.14",
+    "identicon.js": "^2.3.0",
     "md5": "^2.2.1",
     "newrelic": "^1.27.2",
     "nodemon": "^1.2.0",
